force-app/main/default/objects/Log_Settings__c/Log_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store logging preferences</description>
    <label>Log Settings</label>
</CustomObject>