force-app/main/default/objects/Log_Settings__c/fields/Async_Log_Writer_Implementations__c.field-meta.xml
<CustomField>
    <fullName>Async_Log_Writer_Implementations__c</fullName>
    <description>Comma separated list of classes implementing the LogWriterInterface</description>
    <inlineHelpText>Comma separated list of classes implementing the LogWriterInterface</inlineHelpText>
    <label>Async_Log Writer Implementations</label>
    <type>TextArea</type>
</CustomField>